@@ -1,3 +1,8 @@
+* Nov 27, 2007 *
+* Handle properly ImageScience thumbnails resized from a gif file [Matt Aimonetti]
+* Save thumbnails file size properly when using ImageScience [Matt Aimonetti]
+* fixed s3 config file loading with latest versions of Rails [Matt Aimonetti]
+
 * April 2, 2007 *
 
 * don't copy the #full_filename to the default #temp_paths array if it doesn't exist
